--- a/studentmanagment/Views/Students/Create.cshtml
+++ b/studentmanagment/Views/Students/Create.cshtml
@@ -38,6 +38,25 @@
                             </div>
                             <span asp-validation-for="Address" class="text-danger mt-1 d-block"></span>
                         </div>
+
+                        <div class="form-group mb-4">
+                            <label asp-for="Email" class="form-label fw-bold">Email</label>
+                            <div class="input-group">
+                                <span class="input-group-text"><i class="fas fa-envelope"></i></span>
+                                <input asp-for="Email" class="form-control" placeholder="Enter student email" />
+                            </div>
+                            <span asp-validation-for="Email" class="text-danger mt-1 d-block"></span>
+                        </div>
+
+                        <div class="form-group mb-4">
+                            <label asp-for="Password" class="form-label fw-bold">Password</label>
+                            <div class="input-group">
+                                <span class="input-group-text"><i class="fas fa-lock"></i></span>
+                                <input asp-for="Password" class="form-control" placeholder="Enter initial password" type="password" />
+                            </div>
+                            <span asp-validation-for="Password" class="text-danger mt-1 d-block"></span>
+                        </div>
+
                     </div>
 
                     <div class="col-md-6">
