--- a/studentmanagment/Views/Students/Deleted.cshtml
+++ b/studentmanagment/Views/Students/Deleted.cshtml
@@ -23,6 +23,7 @@
                         <thead class="table-light">
                             <tr>
                                 <th>Name</th>
+                                <th>Email</th>
                                 <th>Date of Birth</th>
                                 <th>Address</th>
                                 <th>Subjects</th>
@@ -34,6 +35,7 @@
                             {
                                 <tr>
                                     <td>@student.Name</td>
+                                    <td>@student.Email</td>
                                     <td>@student.DateOfBirth.ToShortDateString()</td>
                                     <td>@student.Address</td>
                                     <td>
@@ -48,6 +50,13 @@
                                             <input type="hidden" name="id" value="@student.Id" />
                                             <button type="submit" class="btn btn-sm btn-success">
                                                 <i class="fas fa-undo-alt"></i> Restore
+                                            </button>
+                                        </form>
+                                        <form asp-action="DeletePermanent" method="post" class="d-inline ms-2">
+                                            @Html.AntiForgeryToken()
+                                            <input type="hidden" name="id" value="@student.Id" />
+                                            <button type="submit" class="btn btn-sm btn-outline-danger">
+                                                <i class="fas fa-trash"></i> Delete Permanently
                                             </button>
                                         </form>
                                     </td>
