--- a/studentmanagment/Views/TeacherDashboard/Dashboard.cshtml
+++ b/studentmanagment/Views/TeacherDashboard/Dashboard.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Teacher Dashboard";
+    Layout = "~/Views/Shared/_TeacherLayout.cshtml";
 }
 
 <div class="container mt-4">
