--- a/studentmanagment/Views/Courses/Create.cshtml
+++ b/studentmanagment/Views/Courses/Create.cshtml
@@ -31,10 +31,10 @@
         <span asp-validation-for="EndDate" class="text-danger"></span>
     </div>
 
-    <div class="form-group mb-3">
+    <div class="form-group mb-3">ww
         <label asp-for="TeacherId" class="form-label">Teacher</label>
         <select asp-for="TeacherId" class="form-control"
-                asp-items="@(new SelectList(Model.Teachers, "Id", "FullName"))">
+                asp-items="@(new SelectList(Model.Teachers, "Id", "Name"))">
             <option value="">-- Select Teacher --</option>
         </select>
         <span asp-validation-for="TeacherId" class="text-danger"></span>
